Added continous movement of alien spaceship

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     position: absolute; 
     background-color: blueviolet;
 }
-.alien{
+#alien{
     position: absolute; 
     left: 700; 
     bottom: 610; 
