Refactored move functions

--- a/style.css
+++ b/style.css
@@ -33,3 +33,10 @@ body{
     background-size: cover;
     background-position: center;
 }
+/* .gameOver{
+    width:500px;
+    height: 400px;
+    margin:180px 500px;
+    background-color: red;
+    border: 2px solid green;
+} */
